--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "donut": "mule.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap",
+    "tdd": "tap -w"
   },
   "author": "Andy Armstrong <andy@hexten.net>",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "lodash": "^4.17.19"
+  },
+  "devDependencies": {
+    "should": "^13.2.3",
+    "tap": "^14.10.7"
   }
 }
