--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.7.2",
-    "config": "^3.3.1",
-    "lodash": "^4.17.19",
-    "native-dns-multisocket": "github:bifurcation/node-dns#master"
+    "lodash": "^4.17.19"
   },
   "devDependencies": {
     "should": "^13.2.3",
